--- a/Online.Web/Web.config
+++ b/Online.Web/Web.config
@@ -17,7 +17,7 @@
     <add key="ProjectID" value="1"></add>
     <add key="ProjectOwner" value="12"></add>
     <add key="IsCrypt" value="true"></add>
-    <add key="RedisServerHosts" value="192.168.1.110:6377"></add>
+    <add key="RedisServerHosts" value="192.168.9.251:6369"></add>
     <add key="Domain" value="runtortv.com"></add>
     <add key="SMSsend-Account" value="javaie" />
     <add key="SMSsend-Password" value="6yhnnmkjuy" />
@@ -28,6 +28,7 @@
     <add key="Email-Password" value="liuzhifei" />
     <add key="Email-SmtpHost" value="smtp.163.com" />
     <add key="Email-SmtpPort" value="25" />
+    <add key="NotifyWebUrl" value="http://192.168.1.110:8089/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
